--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,4 +1,8 @@
 [
   "heatmap_1744846738303.json",
-  "heatmap_1744846738329.json"
+  "heatmap_1744846738329.json",
+  "heatmap_1744849077535.json",
+  "heatmap_1744849077549.json",
+  "heatmap_1744849528665.json",
+  "heatmap_1744849528681.json"
 ]
